# monkey-backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yml
analytics/: admin.py  models.py  services.py  tests.py  urls.py  viewsets.py
analytics/migrations/: 0001_initial.py
core/: asgi.py  celery.py  settings.py  urls.py
feedback/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  viewsets.py
feedback/migrations/: 0001_initial.py
market/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  viewsets.py
market/migrations/: 0001_initial.py  0002_holding_order.py  0002_stock_unique_ticker_per_market.py  0003_remove_order_price_remove_order_quantity_and_more.py  0004_stock_is_active.py  0005_stock_current_price.py  0006_stock_short_code.py  0007_alter_stock_short_code.py  0008_alter_order_status.py  0009_succeeded_orders_to_executed.py  0010_order_execution_detail.py  0011_order_last_finalize_check.py
monkey/: admin.py  apps.py  celery_signals.py  consumers.py  fields.py  kis.py  models.py  names.py  realtime.py  routing.py  serializers.py  services.py  task_catalog.py  tasks.py  tests.py  urls.py  viewsets.py  ws_auth.py
monkey/migrations/: 0001_initial.py  0002_globalmonkeycontrol_kisaccesstoken_and_more.py  0003_monkeydailysnapshot.py  0004_schedule_daily_snapshot_task.py  0005_add_globalcontrol_fields_and_killed_at.py  0006_create_per_monkey_periodic_tasks.py  0007_schedule_market_hours_tasks.py  0008_monkey_traits.py  0009_randomize_monkey_intervals.py  0010_monkey_is_system.py  (+27 more)
(+9 files in other folders)
