[project]
name = "monkey-backend"
version = "0.1.0"
description = "Backend for monkey"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "channels>=4",
    "channels-redis>=4",
    "cryptography>=43",
    "daphne>=4",
    "django>=6.0.1",
    "django-celery-beat>=2.7",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=23.0.0",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.2.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
]
